[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/custom_exports/ResourceManagerMenu.gd" type="Script" id=1]

[node name="ResourceManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_right = 255.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 248.0
margin_bottom = 593.0

[node name="Panel" type="Panel" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Registered Types"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="types_panel" type="Panel" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 241.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TypesList" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/types_panel"]
margin_top = 24.0
margin_right = 241.0
margin_bottom = 24.0

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_left = 259.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 758.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 751.0
margin_bottom = 14.0
text = "Options & Functions"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 751.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer"]
margin_left = 275.0
margin_top = 205.0
margin_right = 475.0
margin_bottom = 363.0

[node name="Btn_ReloadAllResources" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Reload All Resources"

[node name="Btn_UnloadAllResources" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
text = "Unload All Resources"

[node name="Btn_LoadAllResources" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
text = "Load All Resources"

[connection signal="pressed" from="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer/Btn_ReloadAllResources" to="." method="_on_Btn_ReloadAllResources_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer/Btn_UnloadAllResources" to="." method="_on_Btn_UnloadAllResources_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/VBoxContainer/CenterContainer/GridContainer/Btn_LoadAllResources" to="." method="_on_Btn_LoadAllResources_pressed"]
